<resources>
    <string name="app_name">Smart EUB</string>
    <string name="dont_have_an_account_signup">Dont have an account? <u><b><font color="#389583">Sign up</font></b></u></string>
    <string-array name="gender_spinner">
        <item>Select Gender</item>
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>
    <string-array name="batch_spinner">
        <item>Select Batch</item>
        <item>CSE Batch 15-EVE</item>
        <item>CSE Batch 16-EVE</item>
        <item>CSE Batch 17-EVE</item>
        <item>CSE Batch 18-EVE</item>
        <item>CSE Batch 19-EVE</item>
        <item>CSE Batch 20-EVE</item>
        <item>CSE Batch 21-EVE</item>
        <item>CSE Batch 22-EVE</item>
        <item>CSE Batch 23-EVE</item>
        <item>CSE Batch 24-EVE</item>
        <item>CSE Batch 25-EVE</item>
        <item>CSE Batch 26-EVE</item>
        <item>CSE Batch 27-EVE</item>
        <item>CSE Batch 28-EVE</item>
        <item>CSE Batch 29-EVE</item>
        <item>CSE Batch 30-EVE</item>
    </string-array>
    <string-array name="section_spinner">
        <item>Select Section</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
    </string-array>
    <string-array name="blood_group_spinner">
        <item>Select Blood Group</item>
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
        <item>Golden</item>
    </string-array>
    <string-array name="day_spinner">
        <item>Select-Day</item>
        <item>Thursday</item>
        <item>Friday</item>
        <item>Saturday</item>
    </string-array>

    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="powered_by">Powered by</string>
    <string name="byte_fusion">Byte Fusion</string>
    <string name="sign_in">Sign in</string>
    <string name="phone_number_or_email_address">Phone number or Email address</string>
    <string name="password">Password</string>
    <string name="forgotten_password">Forgotten Password?</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="download">Download</string>
    <string name="back">Back</string>
    <string name="save">Save</string>
    <string name="assignment_details">Assignment Details</string>
    <string name="assignment_subject">Assignment Subject</string>
    <string name="course_module_title">Course Module Title</string>
    <string name="course_module_link">Course Module Link</string>
    <string name="notice_title">Notice Title</string>
    <string name="notice_details">Notice Details</string>
    <string name="course_title">Course Title</string>
    <string name="course_code">Course Code</string>
    <string name="lecturer_name">Lecturer Name</string>
    <string name="start_end_time">Start - End Time</string>
    <string name="room_number">Room Number</string>
    <string name="add_course_module">Add Course Module</string>
    <string name="add_class_schedule">Add Class Schedule</string>
    <string name="recent_notices">Recent Notices</string>
    <string name="view_all">View All</string>
    <string name="label_student_portal">Student Portal</string>
    <string name="add_faculty_s_info">Add Faculty\'s Info</string>
    <string name="faculty_s_name">Faculty\'s Name</string>
    <string name="faculty_s_designation">Faculty\'s Designation</string>
    <string name="faculty_s_phone">Faculty\'s Phone</string>
    <string name="call_now">Call Now</string>
    <string name="student_id">Student ID</string>
    <string name="full_name">Full Name</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="email_address">Email Address</string>
    <string name="sign_up">Sign up</string>
    <string name="blood_group">Blood Group</string>
    <string name="gender">Gender</string>
</resources>