<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".presentation.auth.signin.SignInFragment">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/image"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/email_input"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        app:srcCompat="@drawable/ic_splash" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/email_input"
        style="@style/EditTextAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large_super"
        android:drawableStart="@drawable/baseline_email_24"
        android:hint="@string/phone_number_or_email_address"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@id/password_input"
        app:layout_constraintTop_toBottomOf="@id/image" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/password_input"
        style="@style/EditTextAuth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_primary"
        android:background="@drawable/edit_text_rounded_primary_border_bg"
        android:drawableStart="@drawable/baseline_lock_24"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@id/forgot_password"
        app:layout_constraintTop_toBottomOf="@id/email_input" />

    <TextView
        android:id="@+id/forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_secondary"
        android:gravity="center"
        android:padding="@dimen/spacing_small"
        android:text="@string/forgotten_password"
        android:textColor="@color/color_black"
        android:textSize="@dimen/font_secondary"
        app:layout_constraintBottom_toTopOf="@id/signIn_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/password_input" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signIn_button"
        style="@style/AppPrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_secondary"
        android:paddingVertical="@dimen/spacing_12dp"
        android:text="@string/sign_in"
        app:layout_constraintBottom_toTopOf="@id/signUp_button"
        app:layout_constraintTop_toBottomOf="@id/forgot_password" />

    <TextView
        android:id="@+id/signUp_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:text="@string/dont_have_an_account_signup"
        android:textColor="@color/color_black"
        android:textSize="@dimen/font_secondary"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signIn_button" />

    <com.polok.eubmanagement.widget.PrimaryLoader
        android:id="@+id/primary_loader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>