<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingHorizontal="@dimen/spacing_primary"
    android:paddingTop="@dimen/spacing_semi_large"
    android:paddingBottom="@dimen/spacing_primary"
    tools:context=".presentation.faculty.facultyupdate.FacultyUpdateFragment">

    <EditText
        android:id="@+id/faculty_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_primary"
        android:background="@drawable/rounded_background_white"
        android:hint="@string/faculty_s_name"
        android:inputType="text"
        android:maxLines="1"
        android:padding="20dp"
        android:scrollbarAlwaysDrawHorizontalTrack="true"
        android:textAppearance="@style/EditTextPrimary"
        app:layout_constraintBottom_toTopOf="@id/faculty_designation"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed"
        tools:layout_editor_absoluteX="16dp" />

    <EditText
        android:id="@+id/faculty_designation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_primary"
        android:background="@drawable/rounded_background_white"
        android:gravity="start"
        android:hint="@string/faculty_s_designation"
        android:inputType="textMultiLine"
        android:padding="20dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:textAppearance="@style/EditTextPrimary"
        app:layout_constraintBottom_toTopOf="@id/faculty_phone"
        app:layout_constraintTop_toBottomOf="@id/faculty_name" />

    <EditText
        android:id="@+id/faculty_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_primary"
        android:layout_marginBottom="@dimen/spacing_large"
        android:background="@drawable/rounded_background_white"
        android:gravity="start"
        android:hint="@string/faculty_s_phone"
        android:inputType="phone"
        android:padding="20dp"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:textAppearance="@style/EditTextPrimary"
        app:layout_constraintBottom_toTopOf="@id/update_button"
        app:layout_constraintTop_toBottomOf="@id/faculty_designation" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/update_button"
        style="@style/AppPrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_semi_large"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.polok.eubmanagement.widget.PrimaryLoader
        android:id="@+id/primary_loader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>