<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.auth.signup.SignUpFragment">

    <com.google.android.material.button.MaterialButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@android:color/transparent"
        android:paddingHorizontal="@dimen/spacing_tiny"
        android:text="@string/back"
        android:textColor="@color/color_black"
        android:textSize="@dimen/font_secondary"
        app:cornerRadius="@dimen/spacing_12dp"
        app:icon="@drawable/ic_back_arrow"
        app:iconGravity="textStart"
        app:iconPadding="@dimen/spacing_small"
        app:iconTint="@color/color_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:rippleColor="#1A000000" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/spacing_12dp"
        app:layout_constraintBottom_toTopOf="@id/signUp_button"
        app:layout_constraintTop_toBottomOf="@id/back_button">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/spacing_primary"
            android:paddingVertical="@dimen/spacing_large">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_semi_large"
                app:layout_constraintBottom_toTopOf="@id/student_id"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_splash" />

            <EditText
                android:id="@+id/student_id"
                style="@style/EditTextAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:drawableStart="@drawable/baseline_123_24"
                android:hint="@string/student_id"
                android:importantForAutofill="no"
                android:inputType="number"
                app:layout_constraintBottom_toTopOf="@id/full_name"
                app:layout_constraintTop_toBottomOf="@id/image" />

            <EditText
                android:id="@+id/full_name"
                style="@style/EditTextAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:drawableStart="@drawable/baseline_person_24"
                android:hint="@string/full_name"
                android:importantForAutofill="no"
                android:inputType="textCapWords"
                app:layout_constraintBottom_toTopOf="@id/mobile_input"
                app:layout_constraintTop_toBottomOf="@id/student_id" />

            <EditText
                android:id="@+id/mobile_input"
                style="@style/EditTextAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:drawableStart="@drawable/baseline_phone_android_24"
                android:hint="@string/mobile_number"
                android:importantForAutofill="no"
                android:inputType="phone"
                app:layout_constraintBottom_toTopOf="@id/email_input"
                app:layout_constraintTop_toBottomOf="@id/full_name" />

            <EditText
                android:id="@+id/email_input"
                style="@style/EditTextAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:drawableStart="@drawable/baseline_email_24"
                android:hint="@string/email_address"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                app:layout_constraintBottom_toTopOf="@id/password_input"
                app:layout_constraintTop_toBottomOf="@id/mobile_input" />

            <EditText
                android:id="@+id/password_input"
                style="@style/EditTextAuth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:drawableStart="@drawable/baseline_lock_24"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                app:layout_constraintBottom_toTopOf="@id/gender_spinner"
                app:layout_constraintTop_toBottomOf="@id/email_input" />

            <Spinner
                android:id="@+id/gender_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:background="@drawable/edit_text_rounded_primary_border_bg"
                android:entries="@array/gender_spinner"
                android:padding="@dimen/spacing_12dp"
                android:textColor="@color/color_white"
                app:layout_constraintBottom_toTopOf="@id/batch_spinner"
                app:layout_constraintTop_toBottomOf="@id/password_input" />

            <Spinner
                android:id="@+id/batch_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:background="@drawable/edit_text_rounded_primary_border_bg"
                android:entries="@array/batch_spinner"
                android:padding="@dimen/spacing_12dp"
                android:textColor="@color/color_white"
                app:layout_constraintBottom_toTopOf="@id/blood_group_spinner"
                app:layout_constraintTop_toBottomOf="@id/gender_spinner" />

            <Spinner
                android:id="@+id/blood_group_spinner"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_12dp"
                android:background="@drawable/edit_text_rounded_primary_border_bg"
                android:entries="@array/blood_group_spinner"
                android:padding="@dimen/spacing_12dp"
                android:textColor="@color/color_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/batch_spinner" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/signUp_button"
        style="@style/AppPrimaryButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/spacing_primary"
        android:paddingVertical="@dimen/spacing_12dp"
        android:text="@string/sign_up"
        app:layout_constraintBottom_toBottomOf="parent" />

    <com.polok.eubmanagement.widget.PrimaryLoader
        android:id="@+id/primary_loader"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
